Update branding from LAKBAY to Tuklas Pinas throughout the website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LAKBAY - Philippines Tourism</title>
+    <title>Tuklas Pinas - Philippines Tourism</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -15,7 +15,7 @@
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <div class="logo-text">LAKBAY</div>
+                    <div class="logo-text">Tuklas Pinas</div>
                 </div>
                 <div class="nav-links">
                     <ul>
@@ -43,7 +43,7 @@
                     <span>Philippines</span>
                 </div>
                 <h1 class="hero-title">Discover Paradise</h1>
-                <p class="hero-description">Explore the breathtaking beauty of the Philippines with LAKBAY. From
+                <p class="hero-description">Explore the breathtaking beauty of the Philippines with Tuklas Pinas. From
                     pristine beaches to majestic mountains, we offer unforgettable adventures across the 7,641 islands
                     of this tropical paradise.</p>
                 <a href="#destinations" class="book-btn">Explore Destinations</a>
@@ -400,15 +400,15 @@
 
     <section id="about" class="about-section">
         <div class="container">
-            <h2 class="section-title">About <span>LAKBAY</span></h2>
+            <h2 class="section-title">About <span>Tuklas Pinas</span></h2>
             <div class="about-content">
                 <div class="about-image">
                     <img src="https://images.unsplash.com/photo-1528127269322-539801943592?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
-                        alt="LAKBAY Team">
+                        alt="Tuklas Pinas Team">
                 </div>
                 <div class="about-text">
                     <h3 class="about-title">Your Gateway to Philippine Adventures</h3>
-                    <p class="about-description">LAKBAY is a premier tourism company dedicated to showcasing the beauty
+                    <p class="about-description">Tuklas Pinas is a premier tourism company dedicated to showcasing the beauty
                         of the Philippines. Founded in 2010, we have been providing unforgettable travel experiences to
                         thousands of tourists from around the world.</p>
                     <p class="about-description">Our mission is to promote sustainable tourism while highlighting the
@@ -580,10 +580,10 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>LAKBAY</h3>
+                    <h3>Tuklas Pinas</h3>
                     <p>Your gateway to exploring the beautiful islands of the Philippines.</p>
                     <p>123 Rizal Avenue<br>Makati City, Metro Manila<br>Philippines</p>
-                    <p>Phone: +63 (2) 8123-4567<br>Email: info@lakbay.com</p>
+                    <p>Phone: +63 (2) 8123-4567<br>Email: info@Tuklas Pinas.com</p>
                 </div>
 
                 <div class="footer-column">
@@ -618,7 +618,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2023 LAKBAY Philippines Tourism. All rights reserved.</p>
+                <p>&copy; 2023 Tuklas Pinas Philippines Tourism. All rights reserved.</p>
             </div>
         </div>
     </footer>
